# 0xmart-backend

./: .dockerignore  .env.example  .gitignore  ApiEndPointSummary.md  BACKEND_INTEGRATION_GUIDE.md  BACKEND_INTEGRATION_STATUS.md  BlockchainSummary.md  CLAUDE.md  DatabaseQuary.md  Dockerfile  ENV_UPDATE_COMPLETE.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_QUICK_REFERENCE.md  MULTI_CHAIN_DEPLOYMENT_PLAN.md  MULTI_CHAIN_INTEGRATION.md  README.md  SMART_CONTRACT_IMPLEMENTATION.md  SMART_CONTRACT_INTEGRATION.md  SUI_IMPLEMENTATION_SUMMARY.md  SecurityMeasures.md  TESTNET_DEPLOYMENT_GUIDE.md  TestCases.md  build-output.txt  build-output2.txt  build-output3.txt  compose.yaml  eslint.config.mjs  nest-cli.json  package-lock.json  package.json  postman-collection.json  postman.environment.json  tsconfig.json
.claude/: settings.local.json
config/: configuration.ts
docs/: API_TESTING_GUIDE.md
prisma/: prisma.service.ts  schema.prisma  seed.ts
scripts/: activate-products.ts  check-api-key.ts  create-oxmart-token.js  solana-deployer-keypair.json
smart-contracts/: .env.example  .gitignore  CHECK_BALANCE.bat  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_SEPOLIA.bat  FAUCET_LINKS.md  FINAL_DEPLOYMENT_SUMMARY.md  NON_EVM_DEPLOYMENT_STATUS.md  README.md  SETUP_SUMMARY.md  TESTNET_DEPLOYMENT_INSTRUCTIONS.md  (+15 more)
smart-contracts/solana/: Cargo.toml  DEPLOYMENT.md  INSTALL_WINDOWS.md  README.md  SUMMARY.md  build.sh  install-solana.ps1
smart-contracts/solana/src/: instruction.rs  lib.rs  processor.rs
(+220 files in other folders)
