[package]
name = "oxmart-payment"
version = "0.1.0"
edition = "2021"
description = "0xMart Payment Processing Program for Solana"

[lib]
crate-type = ["cdylib", "lib"]
name = "oxmart_payment"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "2.1"
spl-token = { version = "6.0", features = ["no-entrypoint"] }
borsh = "1.5"
borsh-derive = "1.5"
thiserror = "2.0"

[dev-dependencies]
solana-program-test = "2.1"
solana-sdk = "2.1"
spl-associated-token-account = { version = "6.0", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
